Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-45633

QGraphicsScene::focusNextPrevChild() is not virtual

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • 6.0
    • 5.4.0, 5.4.1, 5.5.0 Alpha
    • Widgets: GraphicsView
    • None
    • any
    • ae050611b4004220071cc49e456bc444d9679ddc

    Description

      The docs (http://doc.qt.io/qt-5/qgraphicsscene.html#focusNextPrevChild) say:

      You can reimplement this function in a subclass of QGraphicsScene to provide fine-grained control over how tab focus passes inside your scene.

      This is wrong, because the function is not virtual in QGraphicsScene.h.

      Suggestion:
      Make focusNextPrevChild() virtual.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            peppe Giuseppe D'Angelo
            mhennings Martin Hennings
            Votes:
            1 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes