Mark QGraphicsScene::focusNextPrevChild as virtual in Qt 6

It's supposed to mirror QWidget's one, but this one isn't virtual,
making it useless.

Change-Id: I0dc531bd12b5e18fa11816c03ef5b3941851198f
Task-number: QTBUG-45633
Reviewed-by: Andreas Aardal Hanssen <andreas@hanssen.name>