src/widgets/graphicsview/qgraphicsscene.h
@@ -282,6 +282,10 @@ protected:
                            QWidget *widget = 0);
 
 protected Q_SLOTS:
+    // ### Qt 6: make unconditional
+#if QT_VERSION >= QT_VERSION_CHECK(6, 0, 0)
+    virtual
+#endif
     bool focusNextPrevChild(bool next);
 
 Q_SIGNALS:
